--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             </div>
         </div>
 
-        <div id="admin-content" class="bg-white rounded-[2rem] shadow-xl shadow-slate-200/40 border border-slate-200/60 overflow-hidden animate-enter" style="animation-delay: 0.1s">
+        <div id="admin-content" class="hidden bg-white rounded-[2rem] shadow-xl shadow-slate-200/40 border border-slate-200/60 overflow-hidden" style="animation-delay: 0.1s">
             
             <div class="p-6 md:p-8 border-b border-slate-100 bg-white">
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
@@ -522,4 +522,5 @@
     <script type="module" src="admin.js"></script>
 </body>
 </html>
+
 
