--- a/index.html
+++ b/index.html
@@ -520,7 +520,9 @@
     </div>
 
     <script type="module" src="admin.js"></script>
+    <div id="toast-container" class="fixed bottom-5 right-5 z-[110] flex flex-col gap-2 pointer-events-none"></div>
 </body>
 </html>
+
 
 
