--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                                         <span class="absolute left-3 top-1/2 -translate-y-1/2 text-slate-400 font-bold text-xs">Rp</span>
                                         <input type="number" id="edit-Nominal" class="w-full pl-9 pr-3 py-2.5 bg-slate-50 border-slate-200 rounded-xl text-sm font-bold focus:ring-2 focus:ring-orange-500/20 focus:border-orange-500 transition-all outline-none">
                                     </div>
+                                    <span id="err-nominal" class="hidden text-xs text-red-500 font-bold mt-1 ml-1"><i class="fas fa-exclamation-circle mr-1"></i> Nominal tidak valid</span>
                                 </div>
                                 <div>
                                     <label class="block text-[11px] font-bold text-slate-500 mb-1.5 ml-1">Jenis Donasi</label>
@@ -551,6 +552,7 @@
     <div id="toast-container" class="fixed bottom-5 right-5 z-[110] flex flex-col gap-2 pointer-events-none"></div>
 </body>
 </html>
+
 
 
 
