--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <button id="edit-modal-close" type="button" class="w-10 h-10 rounded-full bg-slate-50 text-slate-400 hover:bg-red-50 hover:text-red-500 transition flex items-center justify-center group"><i class="fas fa-times text-lg group-hover:rotate-90 transition-transform"></i></button>
                 </div>
                 
-                <div class="p-8 space-y-6 overflow-y-auto custom-scrollbar flex-1 bg-slate-50/50">
+                <div class="p-8 space-y-6 overflow-y-auto custom-scrollbar flex-1 min-h-0 bg-slate-50/50 modal-body-scroll">
                     <input type="hidden" id="edit-row-number">
                     
                     <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
@@ -522,5 +522,6 @@
     <script type="module" src="admin.js"></script>
 </body>
 </html>
+
 
 
