--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
     <div id="edit-modal" class="hidden fixed inset-0 bg-slate-900/60 backdrop-blur-sm z-[98] flex items-center justify-center p-4 opacity-0 transition-opacity duration-300">
         <div class="modal-content bg-white rounded-[2.5rem] shadow-2xl w-full max-w-4xl flex flex-col max-h-[90vh] scale-95 transform transition-all duration-300 overflow-hidden ring-1 ring-black/5">
-            <form id="edit-form" class="flex flex-col h-full">
-                <div class="flex justify-between items-center px-8 py-6 border-b border-slate-100 bg-white">
+            <form id="edit-form" class="flex flex-col flex-1 min-h-0">
+                <div class="flex justify-between items-center px-8 py-6 border-b border-slate-100 bg-white shrink-0">
                     <div>
                         <h3 class="text-xl font-bold text-slate-800 flex items-center gap-2">
                             <span class="w-2 h-6 bg-orange-500 rounded-full inline-block"></span>
@@ -136,7 +136,7 @@
                     <button id="edit-modal-close" type="button" class="w-10 h-10 rounded-full bg-slate-50 text-slate-400 hover:bg-red-50 hover:text-red-500 transition flex items-center justify-center group"><i class="fas fa-times text-lg group-hover:rotate-90 transition-transform"></i></button>
                 </div>
                 
-                <div class="p-8 space-y-6 overflow-y-auto custom-scrollbar flex-1 min-h-0 bg-slate-50/50 modal-body-scroll">
+                <div class="p-8 space-y-6 overflow-y-auto custom-scrollbar flex-1 min-h-0 bg-slate-50/50">
                     <input type="hidden" id="edit-row-number">
                     
                     <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
@@ -247,7 +247,7 @@
                     </div>
                 </div>
 
-                <div class="px-8 py-5 border-t border-slate-100 bg-white flex justify-end gap-3 rounded-b-[2.5rem]">
+                <div class="px-8 py-5 border-t border-slate-100 bg-white flex justify-end gap-3 rounded-b-[2.5rem] shrink-0">
                     <button id="edit-modal-cancel" type="button" class="bg-white border border-slate-200 text-slate-600 px-6 py-3 rounded-xl font-bold hover:bg-slate-50 hover:text-slate-800 transition-all">Batal</button>
                     <button id="edit-modal-save" type="submit" class="bg-slate-900 text-white px-8 py-3 rounded-xl font-bold hover:bg-orange-600 transition-all shadow-lg hover:shadow-orange-500/30 flex items-center gap-2">
                         <span id="edit-save-text">Simpan Perubahan</span> 
@@ -522,6 +522,7 @@
     <script type="module" src="admin.js"></script>
 </body>
 </html>
+
 
 
 
